--- a/src/style/index.less
+++ b/src/style/index.less
@@ -1,3 +1,74 @@
-body{
-    background-color: #bfa;
+@bg-color : #b7d4a8;
+
+// 设置字体
+body {
+    font: bold 20px "Courier";
+}
+
+// 统一样式
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+//总容器
+#main {
+    width: 360px;
+    height: 420px;
+    background-color: @bg-color;
+    margin: 100px auto;
+    border: 10px solid black;
+    border-radius: 30px;
+
+    display: flex;
+    flex-flow: column;
+    align-items: center;
+    justify-content: space-around;
+
+    // snkae 的活动范围
+    #stage {
+        width: 304px;
+        height: 304px;
+        border: 2px solid black;
+        position: relative;
+
+        #snake {
+            &>div {
+                width: 10px;
+                height: 10px;
+                background-color: #000;
+                border: 1px solid @bg-color;
+                position: absolute;
+            }
+        }
+
+        // 实物css
+        #food {
+            width: 10px;
+            height: 10px;
+            position: absolute;
+            left: 40px;
+            top: 100px;
+            display: flex;
+            flex-flow: row wrap;
+            justify-content: space-between;
+            align-content: space-between;
+
+            &>div {
+                width: 4px;
+                height: 4px;
+                background-color: black;
+                transform: rotate(45deg);
+            }
+        }
+    }
+
+    #score-panel {
+        width: 300px;
+        display: flex;
+        justify-content: space-between;
+    }
+
+
 }
