完成贪吃蛇的调试

--- a/src/style/index.less
+++ b/src/style/index.less
@@ -58,7 +58,7 @@ body {
             &>div {
                 width: 4px;
                 height: 4px;
-                background-color: black;
+                background-color: rgb(226, 137, 13);
                 transform: rotate(45deg);
             }
         }
